<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
            <variable
                name="ingredientViewModel"
                type="com.example.nutritionapp.ingredientlist.IngredientViewModel" />
        <!-- Create adapter for recycler view to use variable -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ingredient_list_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:textColor="@color/black"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_recipe"></androidx.recyclerview.widget.RecyclerView>
        <!---
            android:liveData="@{ingredientViewModel.listOfSavedIngredients}"

            android:liveData="@{ingredientViewModel.mutableLiveDataList}"

 -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/Ingredients_at_Home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchIngredientButton"
            app:layout_constraintVertical_bias="0.0"></androidx.recyclerview.widget.RecyclerView>

        <EditText
            android:id="@+id/searchIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/recycler_view_network"
            android:layout_marginTop="5dp"
            android:hint="@string/search_ingredient"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={ingredientViewModel.searchItem}"
            app:layout_constraintBottom_toTopOf="@+id/recycler_view_network"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.139" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher_foreground"
            android:elevation="2dp"
            android:fadeVisible="@{ingredientViewModel.viewVisibilityFlag.booleanValue()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchIngredientButton"
            app:layout_constraintVertical_bias="0.262"></ProgressBar>

        <TextView
            android:id="@+id/Ingredients_at_Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="244dp"
            android:text="@string/ingredients_at_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchIngredientButton" />

        <Button
            android:id="@+id/searchIngredientButton"
            style="@style/list_view_button_style"
            android:layout_width="126dp"
            android:layout_height="58dp"
            android:layout_marginTop="96dp"
            android:text="@string/search_grocery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/search_recipe"
            style="@style/list_view_button_style"
            android:layout_width="142dp"
            android:layout_height="58dp"
            android:text="@string/search_recipe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/searchIngredientButton"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/searchIngredientButton"
            app:layout_constraintTop_toBottomOf="@+id/Ingredients_at_Home"
            app:layout_constraintVertical_bias="0.025" />

        <ImageView
            android:id="@+id/shopping_cart"
            android:layout_width="271dp"
            android:layout_height="221dp"
            android:contentDescription="@string/grocery_cart_image"
            android:fadeVisible="@{ingredientViewModel.shoppingCartVisibilityFlag.booleanValue()}"
            app:layout_constraintBottom_toTopOf="@+id/Ingredients_at_Home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchIngredientButton"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/food_shopping_cart" />
        <!--
        <TextView
            android:id="@+id/textView3"
            android:layout_width="77dp"
            android:layout_height="79dp"
            android:text="@{String.valueOf(ingredientViewModel.testFlagStateFlow)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>